# PerfectFrameAI

./: .gitignore  CODE_OF_CONDUCT.md  README.md  README.pl.md  config.py  docker-compose.yaml  docker_manager.py  pyproject.toml  quick_demo.bat  quick_demo_cpu.bat  requirements.txt  setup.py  start.py
.github/: CONTRIBUTING  CONTRIBUTING.md  README.pl.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: run_tests.yml
common/: common.py
evaluators_service/app/: best_frames_evaluator.py  best_images_evaluator.py  evaluators.py  evaluators_manager.py  image_rater.py  schemas.py
extractor_service/: .dockerignore  Dockerfile  main.py  requirements.txt
extractor_service/app/: check_cuda.py  dependencies.py  extractor_manager.py  extractors.py  image_evaluators.py  image_manipulators.py  image_processors.py  image_raters.py  schemas.py  video_manipulators.py  video_processors.py
frames_evaluators_service/: main.py
frames_evaluators_service/app/: best_frames_extractor.py  display_cuda_info.py  evaluator.py  evaluators_manager.py  pydantic_models.py  top_frames_selector.py
image_extractor_service/: main.py
image_extractor_service/app/: check_cuda.py  extractor_manager.py  extractors.py  image_manipulators.py  image_rater.py  schemas.py  video_manipulators.py
service_manager/: docker_manager.py  service_initializer.py
service_manager/tests/: common.py  (+2 more)
setup_tests/: docker_manager_test.py  setup_test.py
tests/: common.py  docker_manager_test.py  setup_test.py  start_test.py
(+72 files in other folders)
