[tool.poetry]
name = "frame-evaluator-ai"
version = "1.9.0"
description = ""
authors = ["Bartłomiej Flis <Bartekdawidflis@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
numpy = "^1.26.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-order = "^1.2.1"
httpx = "^0.27.0"
opencv-python = "^4.9.0.80"
requests = "^2.31.0"
tensorflow = "^2.16.1"
tensorflow-io-gcs-filesystem = "0.31.0"
docker = "^7.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
